# BSRoformer.cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  GGML_DEPENDENCY.md  LICENSE  README.md  README.zh.md  benchmark.py  benchmark_official.py  benchmark_official_vulkan.py
.github/workflows/: build.yml  convert-model.yml  release.yml
cli/: main.cpp  process_utils.cpp  process_utils.h
docs/: benchmark_report.md  implementation-evaluation.md  incremental-api-design.md  incremental-api-proposal.h  memory-analysis-summary.md  memory-optimization-research.md  streaming-stft-design.md  upstream-optimization-roadmap.md
docs/plans/: 2026-03-04-streaming-inference-memory-b-plan.md
include/bs_roformer/: audio.h  inference.h
include/mel_band_roformer/: inference.h
scripts/: convert_to_gguf.py  generate_test_audio.py  generate_test_data.py
src/: audio.cpp  inference.cpp  model.cpp  model.h  stft.h  utils.cpp  utils.h
tests/: CMakeLists.txt  README.md  test_audio.cpp  test_cancel_callback.cpp  test_chunking_logic.cpp  test_cli_process.cpp  test_common.cpp  test_common.h  test_component_bandsplit.cpp  test_component_layers.cpp  test_component_mask.cpp  test_component_stft.cpp  test_inference.cpp  test_inference_offset_stability.cpp  test_inference_repeatability.cpp  test_stft_consistency.cpp  test_streaming_overlap_add.cpp
